288: Fix excessive scrolling and screen height (#295)
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/internal/server/ui/components/body/component.templ
+++ b/internal/server/ui/components/body/component.templ
@@ -1,6 +1,7 @@
 package body
 
 import (
+	"autobutler/internal/server/ui/components/footer"
 	"autobutler/internal/server/ui/components/gradient_overlays"
 	"autobutler/internal/server/ui/components/topnav"
 	"autobutler/internal/server/ui/types"
@@ -13,6 +14,7 @@ templ Component(pageState types.PageState) {
 			<div class="site-fullscreen-col">
 				@topnav.Component(pageState)
 				{ children... }
+				@footer.Component()
 			</div>
 		</main>
 	</body>
