--- a/internal/server/ui/components/hero/component.templ
+++ b/internal/server/ui/components/hero/component.templ
@@ -1,7 +1,7 @@
 package hero
 
 templ Component() {
-	<div class="min-h-screen flex flex-col items-center justify-center p-8">
+	<div class="flex flex-col items-center justify-center p-8">
 		<div class="text-center max-w-3xl space-y-8">
 			@icon()
 			@ctaButton()
