--- a/internal/server/ui/components/file_explorer/file_context_menu/component.templ
+++ b/internal/server/ui/components/file_explorer/file_context_menu/component.templ
@@ -34,6 +34,16 @@ templ Component(pageState types.PageState, file fs.FileInfo) {
 				<button
 					type="button"
 					class="w-full text-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-700 text-sm"
+					hx-on:click={ templ.JSFuncCall("renameFile", templ.JSExpression("event"), pageState.RootDir, file.Name()) }
+				>
+					Rename
+				</button>
+				<hr/>
+			</li>
+			<li>
+				<button
+					type="button"
+					class="w-full text-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-700 text-sm"
 					hx-on:click={ templ.JSFuncCall("showFileDetails", templ.JSExpression("event"), file.Name()) }
 				>
 					File Details
