--- a/internal/server/ui/components/file_explorer/file_context_menu/component.templ
+++ b/internal/server/ui/components/file_explorer/file_context_menu/component.templ
@@ -17,7 +17,7 @@ templ Component(pageState types.PageState, file fs.FileInfo) {
 			&#x22EE;
 		</button>
 		<ul
-			class="context-menu hidden absolute mt-2 w-28 bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded shadow-lg z-10"
+			class="context-menu hidden absolute mt-2 w-fit bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded shadow-lg z-10"
 			hx-on:mouseleave="closeContextMenu(null, this.parentElement)"
 		>
 			<li>
@@ -28,6 +28,16 @@ templ Component(pageState types.PageState, file fs.FileInfo) {
 				>
 					Download
 				</a>
+				<hr/>
+			</li>
+			<li>
+				<button
+					type="button"
+					class="w-full text-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-700 text-sm"
+					hx-on:click={ templ.JSFuncCall("moveFile", templ.JSExpression("event"), pageState.RootDir, file.Name()) }
+				>
+					Move/Rename
+				</button>
 				<hr/>
 			</li>
 			<li>
