--- a/internal/server/ui/components/file_explorer/component.templ
+++ b/internal/server/ui/components/file_explorer/component.templ
@@ -94,21 +94,37 @@ templ Component(pageState types.PageState, files []fs.FileInfo) {
 								<th class="text-left">
 									<button
 										id="sort-name"
-										class="flex flex-1 w-full px-2 py-1 text-left rounded hover:bg-gray-200 dark:hover:bg-gray-700"
+										class="flex items-center justify-between w-full px-2 py-1 text-left rounded hover:bg-gray-200 dark:hover:bg-gray-700"
 										type="button"
 										hx-on:click="sortFiles('name')"
 									>
-										Name
+										<span>Name</span>
+										<div class="flex flex-col ml-1">
+											<svg id="name-sort-asc" class="w-3 h-3 text-gray-400 hidden" fill="currentColor" viewBox="0 0 24 24">
+												<path d="M7 14l5-5 5 5z"/>
+											</svg>
+											<svg id="name-sort-desc" class="w-3 h-3 text-gray-400 hidden" fill="currentColor" viewBox="0 0 24 24">
+												<path d="M7 10l5 5 5-5z"/>
+											</svg>
+										</div>
 									</button>
 								</th>
 								<th class="text-right w-24">
 									<button
 										id="sort-size"
-										class="w-full px-2 py-1 text-right rounded hover:bg-gray-200 dark:hover:bg-gray-700"
+										class="flex items-center justify-end w-full px-2 py-1 text-right rounded hover:bg-gray-200 dark:hover:bg-gray-700"
 										type="button"
 										hx-on:click="sortFiles('size')"
 									>
-										Size
+										<span>Size</span>
+										<div class="flex flex-col ml-1">
+											<svg id="size-sort-asc" class="w-3 h-3 text-gray-400 hidden" fill="currentColor" viewBox="0 0 24 24">
+												<path d="M7 14l5-5 5 5z"/>
+											</svg>
+											<svg id="size-sort-desc" class="w-3 h-3 text-gray-400 hidden" fill="currentColor" viewBox="0 0 24 24">
+												<path d="M7 10l5 5 5-5z"/>
+											</svg>
+										</div>
 									</button>
 								</th>
 								<th class="w-10"></th>
