--- a/internal/server/ui/components/file_explorer/node/component.templ
+++ b/internal/server/ui/components/file_explorer/node/component.templ
@@ -26,7 +26,7 @@ templ Component(pageState types.PageState, file fs.FileInfo) {
 	if file != nil {
 		{{ nodeClasses += " file-node" }}
 	}
-	<li
+	<tr
 		class={ nodeClasses }
 		hx-on:contextmenu="toggleFloatingContextMenu(event, this)"
 		hx-on:dragenter="activateDropZoneOnNode(event)"
@@ -35,66 +35,56 @@ templ Component(pageState types.PageState, file fs.FileInfo) {
 		hx-on:drop={ templ.JSFuncCall("dropOnNode", templ.JSExpression("event"), pageState.RootDir) }
 		data-name={ fileName }
 	>
-		<div class="flex items-center">
-			{{ /* Render the appropriate icon based on the file type */ }}
-			switch fileType {
-				case util.FileTypeFolder:
+		switch fileType {
+			case util.FileTypeFolder:
+				{{ filePath := filepath.Join("/files", pageState.RootDir, fileName) }}
+				<td class="flex items-center py-3">
 					@folder.Component()
-				case util.FileTypePDF:
-					@pdf.Component()
-				case util.FileTypeSlideshow:
-					@slideshow.Component()
-				case util.FileTypeImage:
-					@image.Component()
-				case util.FileTypeArchive:
-					@archive.Component()
-				case util.FileTypeSpacer:
-					{{ /* Render nothing for spacer */ }}
-				default:
-					@generic.Component()
-			}
-			switch fileType {
-				case util.FileTypeFolder:
-					{{ filePath := filepath.Join("/files", pageState.RootDir, fileName) }}
-					<div
-						class="flex flex-1 items-center"
-					>
-						<a href={ filePath } class="flex-1 py-3">
-							<span class="file-name">{ fileName }</span>
-						</a>
-						<span class="text-gray-600 dark:text-gray-200 text-sm">{ util.SizeBytesToString(file.Size()) }</span>
-					</div>
-					<div class="justify-self-end">
-						@file_context_menu.Component(pageState, file)
-					</div>
-				case util.FileTypeSpacer:
-					<div
-						class="flex flex-1 items-center justify-center py-3 italic text-gray-400"
-						hx-on:click="document.getElementById('file-upload-input').click()"
-					>
-						<span class="file-name">Drop files here&#8230;</span>
-					</div>
-					<div class="justify-self-end">
-						@explorer_context_menu.Component(pageState)
-					</div>
-				default:
-					{{ filePath := filepath.Join("/files", pageState.RootDir, fileName) }}
-					<div
-						class="flex flex-1 items-center"
-						hx-get={ filepath.Join("/components/files/viewer", filePath) }
-						hx-target="#file-viewer-content"
-						hx-swap="innerHTML"
-						hx-on:click="document.getElementById('file-viewer').showModal();"
-					>
-						<div class="flex-1 py-3">
-							<span class="file-name">{ fileName }</span>
-						</div>
-						<span class="text-gray-600 dark:text-gray-200 text-sm">{ util.SizeBytesToString(file.Size()) }</span>
-					</div>
-					<div class="justify-self-end">
-						@file_context_menu.Component(pageState, file)
-					</div>
-			}
-		</div>
-	</li>
+					<a href={ filePath } class="flex-1 ml-2">
+						<span class="file-name">{ fileName }</span>
+					</a>
+				</td>
+				<td class="text-gray-600 dark:text-gray-200 text-sm text-right py-3">
+					{ util.SizeBytesToString(file.Size()) }
+				</td>
+				<td class="py-3">
+					@file_context_menu.Component(pageState, file)
+				</td>
+			case util.FileTypeSpacer:
+				<td colspan="3" class="py-3 text-center italic text-gray-400" hx-on:click="document.getElementById('file-upload-input').click()">
+					<span class="spacer file-name">Drop files here&#8230;</span>
+					@explorer_context_menu.Component(pageState)
+				</td>
+			default:
+				{{ filePath := filepath.Join("/files", pageState.RootDir, fileName) }}
+				<td
+					class="flex items-center py-3 cursor-pointer"
+					hx-get={ filepath.Join("/components/files/viewer", filePath) }
+					hx-target="#file-viewer-content"
+					hx-swap="innerHTML"
+					hx-on:click="document.getElementById('file-viewer').showModal();"
+				>
+					{{ /* Render the appropriate icon based on the file type */ }}
+					switch fileType {
+						case util.FileTypePDF:
+							@pdf.Component()
+						case util.FileTypeSlideshow:
+							@slideshow.Component()
+						case util.FileTypeImage:
+							@image.Component()
+						case util.FileTypeArchive:
+							@archive.Component()
+						default:
+							@generic.Component()
+					}
+					<span class="file-name ml-2">{ fileName }</span>
+				</td>
+				<td class="text-gray-600 dark:text-gray-200 text-sm text-right py-3">
+					{ util.SizeBytesToString(file.Size()) }
+				</td>
+				<td class="py-3">
+					@file_context_menu.Component(pageState, file)
+				</td>
+		}
+	</tr>
 }
