--- a/internal/server/ui/components/file_explorer/file_viewer/unsupported_viewer/component.templ
+++ b/internal/server/ui/components/file_explorer/file_viewer/unsupported_viewer/component.templ
@@ -8,7 +8,7 @@ templ Component(filePath string) {
 			</p>
 		</div>
 		<div>
-			<a href={ "/files/" + filePath } class="text-white bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-lg transition-colors duration-200 flex items-center space-x-2 mx-auto mt-4 w-fit" download>
+			<a href={ "/files/" + filePath } class="file-viewer-download-btn" download>
 				Download file
 			</a>
 		</div>
