--- a/internal/server/ui/components/file_explorer/file_viewer/video_viewer/component.templ
+++ b/internal/server/ui/components/file_explorer/file_viewer/video_viewer/component.templ
@@ -20,7 +20,7 @@ func determineVideoType(filePath string) string {
 
 templ Component(filePath string) {
 	<video
-		class="max-w-full max-h-full"
+		class="file-viewer-media"
 		controls
 	>
 		<source
