fix-css: Fix calendar hover
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/internal/server/public/styles/variables.css
+++ b/internal/server/public/styles/variables.css
@@ -7,6 +7,7 @@
 	/* Color scheme variables */
 	--color-primary-50: #eff6ff;
 	--color-primary-100: #dbeafe;
+	--color-primary-200: #bfdbfe;
 	--color-primary-600: #2563eb;
 	--color-primary-700: #1d4ed8;
 
